--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -47,7 +47,7 @@ $menu = wofi --show drun
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-# exec-once = nm-applet &
+exec-once = nm-applet & blueman-applet
 exec-once = waybar & hyprpaper &
 
 
