--- a/waybar/config
+++ b/waybar/config
@@ -5,8 +5,8 @@
     // "width": 1280, // Waybar width
     // Choose the order of the modules
     "modules-left": ["hyprland/workspaces", "sway/mode", "custom/media"],
-    "modules-center": ["sway/window"],
-    "modules-right": ["pulseaudio", "network", "backlight", "sway/language", "battery", "battery#bat2", "clock", "tray"],
+    "modules-center": ["hyprland/window"],
+    "modules-right": ["idle_inhibitor","pulseaudio", "network", "backlight", "sway/language", "battery", "battery#bat2", "clock", "tray"],
     // Modules configuration
     // "sway/workspaces": {
     //     "disable-scroll": true,
@@ -51,6 +51,10 @@
         },
         "tooltip-format": "MPD (connected)",
         "tooltip-format-disconnected": "MPD (disconnected)"
+    },
+    "hyprland/window": {
+		"max-length": 200,
+		"separate-outputs": true
     },
     "idle_inhibitor": {
         "format": "{icon}",
