--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,8 +48,8 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 exec-once = nm-applet & blueman-applet
-exec-once = waybar & hyprpaper &
-
+exec-once = waybar &
+exec-once = swaybg -i ~/Pictures/Mecha-Nostalgia.png
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -139,8 +139,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
