feat: i don't know what is going on with my linux machine

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,8 +48,14 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 exec-once = nm-applet & blueman-applet
-exec-once = waybar &
+exec-once= waybar &
 exec-once = swaybg -i ~/Pictures/Mecha-Nostalgia.png
+
+exec = gsettings set $gnome-schema gtk-theme 'Qogir-Dark'
+exec = gsettings set $gnome-schema icon-theme 'Papirus-Dark'
+exec = gsettings set $gnome-schema cursor-theme 'Adwaita'
+exec = gsettings set $gnome-schema font-name 'Ubuntu Nerd Font'
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
