--- a/sway/config
+++ b/sway/config
@@ -56,12 +56,12 @@ exec swayidle -w \
 #
 # Example configuration:
 #
-   input "2:7:SynPS/2_Synaptics_TouchPad" {
+input "2:7:SynPS/2_Synaptics_TouchPad" {
        dwt enabled
        tap enabled
        natural_scroll enabled
        middle_emulation enabled
-   }
+}
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
@@ -222,7 +222,11 @@ bindsym $mod+r mode "resize"
 # This mechanism permits overriding our default configuration per-system
 # (/etc) or per-user ($XDG_CONFIG_HOME) basis. Just create the file you
 # want to modify/override in the higher-level directory.
-#
+
+bar { 
+     swaybar_command waybar
+}
+
 # For example, to disable the default bar from Fedora configs, you'll need to
 #     $ echo -n > "$HOME/.config/sway/config.d/90-bar.conf"
 #
@@ -243,6 +247,7 @@ exec_always {
     gsettings set $gnome-schema icon-theme 'Papirus-Dark'
     gsettings set $gnome-schema cursor-theme 'Adwaita'
     gsettings set $gnome-schema font-name 'Ubuntu Nerd Font'
+    nm-applet & blueman-applet &
 }
 
 
