feat : alot of changes

--- a/inkscape/dialogs-state-ex.ini
+++ b/inkscape/dialogs-state-ex.ini
@@ -18,6 +18,6 @@ state5=[Windows]\nCount=1\n\n[Window0Column0]\nNotebook0Dialogs=Objects;\nNotebo
 dialogs5=Objects;
 state6=[Windows]\nCount=1\n\n[Window0Column0]\nNotebook0Dialogs=Preferences;\nNotebookCount=1\n\n[Window0]\nColumnCount=1\nPosition=true\nx=0\ny=0\nwidth=925\nheight=609\n
 dialogs6=Preferences;
-state7=
+state7=[Windows]\nCount=1\n\n[Window0Column0]\nNotebook0Dialogs=XMLEditor;\nNotebookCount=1\n\n[Window0]\nColumnCount=1\nPosition=true\nx=0\ny=0\nwidth=360\nheight=520\n
 dialogs7=XMLEditor;
 count=7
