--- a/gtk-2.0/gtkfilechooser.ini
+++ b/gtk-2.0/gtkfilechooser.ini
@@ -2,10 +2,10 @@
 LocationMode=path-bar
 ShowHidden=false
 ShowSizeColumn=true
-GeometryX=293
-GeometryY=102
+GeometryX=0
+GeometryY=0
 GeometryWidth=780
 GeometryHeight=585
-SortColumn=name
+SortColumn=modified
 SortOrder=ascending
 StartupMode=recent
