--- a/waybar/config
+++ b/waybar/config
@@ -4,9 +4,9 @@
     "height": 30, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
     // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
-    "modules-center": ["sway/window"],
-    "modules-right": ["mpd","idle_inhibitor","pulseaudio","network", "backlight",  "battery", "battery#bat2", "clock", "tray"],
+    "modules-left": ["sway/workspaces", "sway/mode", "custom/media","sway/window"],
+    "modules-center": ["mpd"],
+    "modules-right": ["idle_inhibitor","pulseaudio","network", "backlight",  "battery", "battery#bat2", "clock", "tray"],
     // Modules configuration
     // "sway/workspaces": {
     //     "disable-scroll": true,
@@ -28,7 +28,7 @@
     },
     "mpd": {
         "server" : "127.0.0.2",
-		"format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ ",
+		"format": "{stateIcon} {consumeIcon} {repeatIcon}{singleIcon} {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ",
         "format-disconnected": "Disconnected ",
         "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
         "unknown-tag": "N/A",
@@ -36,10 +36,10 @@
         "consume-icons": {
             "on": " "
         },
-        "random-icons": {
-            "off": "<span color=\"#f53c3c\"></span> ",
-            "on": " "
-        },
+//        "random-icons": {
+//            "off": "<span color=\"#f53c3c\"></span> ",
+//            "on": " "
+//        },
         "repeat-icons": {
             "on": " "
         },
@@ -52,10 +52,12 @@
         },
         "tooltip-format": "MPD (connected)",
 		"on-click":"mpc --host=127.0.0.2 toggle",
+		"on-scroll-up":"mpc --host=127.0.0.2 seek +10",
+		"on-scroll-down":"mpc --host=127.0.0.2 seek -10",
         "tooltip-format-disconnected": "MPD (disconnected)"
     },
     "sway/window": {
-		"max-length": 100,
+		"max-length": 50,
 		"separate-outputs": true
     },
     "idle_inhibitor": {
@@ -114,11 +116,12 @@
     },
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
+        "format-wifi": "{signalStrength}% ",
         "format-ethernet": "{ifname}: {ipaddr}/{cidr} 󰈀",
         "format-linked": "{ifname} (No IP) 󰈀",
         "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "format-alt": "{ifname}: {essid}",
+		"tooltip-format":"{essid}"
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
